Matched output can be a merging of both input columns
When the user wanted specific columns of the two inputs, until now Match
would output the whole of both inputs in an arranged order. So another step
was necessary to keep certain columns for higher level analysis. Match now
has a `--outcols' option which the user can use to specify which columns of
the two inputs they want in the output.

To make this possible, it was necessary to have the number of columns
matched with certain column selection options. Therefore `gal_table_read'
was given a new pointer argument. When this pointer is not NULL, the number
of columns in the output that match a given input are stored in the
respective space.

--- a/NEWS
+++ b/NEWS
@@ -92,6 +92,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   the library (declared in `gnuastro/cosmology.h'). These functions are
   also used in the CosmicCalculator program.
 
+  `gal_table_read' can now return the number of columns matched with each
+  input column (for example with regular expressions), a new argument has
+  been added to allow this feature.
+
   `gal_fits_key_img_blank': returns the value that must be used in the
   BLANK keyword for the given type as defined by the FITS standard.
 
